# genki_anki_deck_generator

./: .gitignore  README.md  Readme.md  ankidecks_description_genki_1.html  ankidecks_description_genki_1.md  ankidecks_description_genki_2.html  ankidecks_description_genki_2.md  download_fonts.py  download_genki_sound_files.py  main.py  pyproject.toml  scratch.py
config/decks/genki_1/: audio.yaml
config/decks/genki_1/L00/: 01_greetings.yaml  02_numbers_0-100.yaml
config/decks/genki_1/L01/: 01_vocabulary.yaml  02_additional_vocabulary.yaml  03_year_student.yaml  04_years_old.yaml  (+2 more)
config/decks/genki_2/: audio.yaml  description.md
config_orig/: config.toml
config_orig/decks/genki_1/: audio.yaml
config_orig/decks/genki_2/: audio.yaml
genki_anki_deck_generator/: __main__.py  template.py
genki_anki_deck_generator/utils/: config.py  google_drive.py  sound.py
src/: anki_exporter.py  data.py  kanji_fetcher.py  sound.py
temp/: 693903900.json  693903901.json  693904000.json  693904001.json  693904004.json  693904100.json  693904101.json  693904102.json  693904200.json  693904300.json  693904303.json  693904400.json  693904500.json  693904600.json  693904602.json  693904700.json  693904800.json  693904900.json  693904901.json  693905000.json  693905001.json  693905100.json  693905101.json  693905200.json  693905300.json  693905400.json  693905500.json  693905600.json  693905700.json  693905800.json  693905900.json  693906000.json  693906100.json  693906200.json
utils/: csv2yaml.py  gen_additional_kanji_data.py  gen_anki_data.py  to_yaml_helperscript.py
(+63 files in other folders)
