[project]
name = "genki-anki-deck-generator"
version = "0.1.0"
description = "Python scripts for extracting vocabulary sounds from Genki audio files and generating anki decks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachier>=3.1.2",
    "gdown>=5.2.0",
    "genanki>=0.13.1",
    "num2words>=0.5.14",
    "pydub>=0.25.1",
    "requests>=2.32.3",
    "ruamel-yaml>=0.18.13",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "ruff>=0.11.13",
]
